fixing white space on side of mobile

--- a/css/btstyle.css
+++ b/css/btstyle.css
@@ -16,7 +16,14 @@ a {
     font-size: large;
     background-position: 100% 0%;
 }
+.body 
+    {
+        font-family: 'Raleway', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+        text-shadow: 1px 1px 1px rgba(0, 0, 0, .004);
+        -webkit-font-smoothing: antialiased;
+        background-color: white;
 
+    }
 .container {
     position: absolute;
     top: 0;
@@ -24,6 +31,7 @@ a {
     width: 100%;
     height: 100%;
     background-color:white
+    overflow-x: hidden; 
 }
    
 .top {
